--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^4.7.2",
-    "react-native-web": "^0.15.0"
+    "react-native-web": "^0.15.0",
+    "socket.io-client": "^4.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
