--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^4.7.2",
+    "react-native-plotly": "^4.0.0",
     "react-native-web": "^0.15.0",
+    "react-native-webview": "^11.3.2",
     "socket.io-client": "^4.0.0"
   },
   "devDependencies": {
