--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,22 +8,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~37.0.3",
-    "expo-constants": "^9.0.0",
-    "expo-status-bar": "^1.0.3",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
+    "expo": "^41.0.0",
+    "expo-constants": "~10.1.3",
+    "expo-status-bar": "~1.0.4",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.7.2",
     "react-native-plotly": "^4.0.0",
-    "react-native-web": "^0.15.0",
-    "react-native-webview": "^11.3.2",
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "11.2.3",
     "socket.io-client": "^4.0.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "babel-preset-expo": "8.3.0",
+    "@babel/core": "~7.9.0"
   },
   "private": true
 }
