--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "clear": "^0.1.0",
     "expo": "^41.0.0",
     "expo-constants": "~10.1.3",
+    "expo-google-app-auth": "^8.1.7",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
